# RsR

./: .gitignore  .gitmodules  .polyscope.ini  CMakeLists.txt  imgui.ini
3rd/cmake/: polyscope.cmake
configs/: big_tree_config.txt  example_config.txt  letter_config.txt  tree_light_config.txt
src/: Recon.cpp  Recon.h  graph_utils.cpp  graph_utils.h  io.cpp  io.h  mst.cpp  mst.h  normal.cpp
